--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,9 @@
         <variable
             name="viewModel"
             type="com.ezralee.bdotodo.viewmodel.main.MainActivityVM" />
+        <variable
+            name="fragmentManager"
+            type="androidx.fragment.app.FragmentManager" />
     </data>
 <RelativeLayout
     android:layout_width="match_parent"
@@ -17,9 +20,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/main_BNV"
-        app:addOnPageChangeListener="@{viewModel.pageChangeListener}"
-        app:setAdapter="@{viewModel.adapter}"
-        app:setCurrentItem="@{viewModel.currentPosition}"/>
+        setFsm="@{fragmentManager}"
+        setVM="@{viewModel}"
+        sharePosition="@{viewModel.position}"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/main_BNV"
@@ -32,7 +35,8 @@
         app:itemTextColor="@color/colorOnSecondary"
         app:itemTextAppearanceActive="@style/selectedBNVtextStyle"
         app:itemTextAppearanceInactive="@style/notSelectedBNVtextStyle"
-        app:setupWithViewPager="@{mainVP}"/>
+        setVM="@{viewModel}"
+        sharePosition="@{viewModel.position}"/>
 
 </RelativeLayout>
 </layout>
