--- a/app/src/main/res/layout/activity_set_goal.xml
+++ b/app/src/main/res/layout/activity_set_goal.xml
@@ -5,6 +5,9 @@
         <variable
             name="viewModel"
             type="com.ezralee.bdotodo.viewmodel.goal.SetGoalActivityVM" />
+        <variable
+            name="fragmentManager"
+            type="androidx.fragment.app.FragmentManager" />
     </data>
 <RelativeLayout
     android:layout_width="match_parent"
@@ -15,9 +18,9 @@
         android:id="@+id/set_goal_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:addOnPageChangeListener="@{viewModel.pageChangeListener}"
-        app:setAdapter="@{viewModel.adapter}"
-        app:setCurrentItem="@{viewModel.currentPosition}" />
+        setVM="@{viewModel}"
+        setFsm="@{fragmentManager}"
+        android:adapter=""/>
 
     <LinearLayout
         android:layout_width="match_parent"
