--- a/app/src/main/res/layout/history_inner_recycler_item.xml
+++ b/app/src/main/res/layout/history_inner_recycler_item.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
-            name="historyData"
+            name="data"
             type="com.ezralee.bdotodo.data.model.HistoryData" />
 
         <variable
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/nexonlv1_bold"
         android:textSize="20sp"
-        android:text="@{historyData.title}"/>
+        android:text="@{data.title}"/>
 
     <ImageView
         android:id="@+id/inner_recycler_image"
@@ -31,7 +31,7 @@
         android:src="@drawable/img_sample"
         android:layout_below="@+id/inner_recycler_title"
         android:layout_marginVertical="4dp"
-        imgUrl="@{historyData.imgUrl}"/>
+        imgUrl="@{data.imgUrl}"/>
 
 </RelativeLayout>
 </layout>
