--- a/app/src/main/res/layout/goal_preset_recycler_item.xml
+++ b/app/src/main/res/layout/goal_preset_recycler_item.xml
@@ -12,8 +12,7 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12dp"
-    android:onClick="@{(presetGoal)->viewModel.getPresetData(presetGoal)}">
+    android:padding="12dp">
 
         <TextView
             android:id="@+id/preset_goal"
