--- a/app/src/main/res/layout/set_goal2_recycler_item.xml
+++ b/app/src/main/res/layout/set_goal2_recycler_item.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-
     <data>
-
         <variable
             name="taskData"
             type="com.ezralee.bdotodo.data.model.TaskData" />
@@ -24,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text=""
+            android:text="@={viewModel.nor}"
             android:textColor="@color/colorPrimaryVariant" />
 
         <LinearLayout
