--- a/app/src/main/res/layout/activity_show_history.xml
+++ b/app/src/main/res/layout/activity_show_history.xml
@@ -3,11 +3,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
-            name="historyItem"
+            name="data"
             type="com.ezralee.bdotodo.data.model.HistoryData" />
         <variable
             name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.history.ShowHistoryVM" />
+            type="com.ezralee.bdotodo.viewmodel.history.MainHistoryVM" />
     </data>
 <RelativeLayout
     style="@style/history_dialog"
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginRight="8dp"
-            android:text="@{historyItem.title}"
+            android:text="@{data.title}"
             android:layout_marginVertical="6dp"
             android:fontFamily="@font/nexonlv1_bold"
             android:textSize="20sp"/>
@@ -86,7 +86,7 @@
             android:layout_marginRight="8dp"
             android:layout_toLeftOf="@+id/history_date"
             android:layout_below="@+id/history_title"
-            android:text="@{historyItem.category}" />
+            android:text="@{data.category}" />
 
         <TextView
             android:id="@+id/history_date"
@@ -95,7 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_gravity="right"
-            android:text="@{historyItem.date}"
+            android:text="@{data.date}"
             android:layout_alignBottom="@+id/history_category"/>
 
         <androidx.core.widget.NestedScrollView
@@ -125,7 +125,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/history_image"
-                    android:text="@{historyItem.memo}"
+                    android:text="@{data.memo}"
                     android:maxLines="8"
                     android:paddingHorizontal="8dp"
                     android:layout_marginTop="12dp"/>
@@ -148,7 +148,7 @@
             android:paddingVertical="8dp"
             android:text="수정"
             android:textColor="@color/colorOnPrimary"
-            android:onClick="@{()->viewModel.edit(historyItem)}"/>
+            android:onClick="@{()->viewModel.editHistory(viewModel)}"/>
 
         <Button
             android:id="@+id/history_ok"
@@ -166,8 +166,7 @@
             android:paddingHorizontal="12dp"
             android:paddingVertical="8dp"
             android:text="확인"
-            android:textColor="@color/colorOnPrimary"
-            android:onClick="@{()->viewModel.cancel()}"/>
+            android:textColor="@color/colorOnPrimary" />
 
     </RelativeLayout>
 </RelativeLayout>
