--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -32,8 +32,7 @@
         app:reverseLayout="true"
         app:stackFromEnd="true"
         tools:listitem="@layout/history_recycler_item"
-        android:adapter="@{viewModel.recyclerAdapter}"
-        android:onItemSelected="@{()->viewModel.onClickEvent()}"/>
+        items="@{viewModel.historyList}"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
@@ -45,8 +44,7 @@
         android:layout_alignParentRight="true"
         android:layout_margin="20dp"
         android:src="@drawable/ic_baseline_add_24"
-        android:backgroundTint="@color/colorPrimary"
-        android:onClick="@{()->viewModel.setHistory()}"/>
+        android:backgroundTint="@color/colorPrimary"/>
 
 </RelativeLayout>
 </layout>
