--- a/app/src/main/res/layout/goallist_inner_recycler_item.xml
+++ b/app/src/main/res/layout/goallist_inner_recycler_item.xml
@@ -2,9 +2,8 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
-
         <variable
-            name="planData"
+            name="plan"
             type="com.ezralee.bdotodo.data.model.PlanData" />
         <variable
             name="viewModel"
@@ -19,7 +18,7 @@
         android:id="@+id/goallist_inner_recycler_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@{planData.plan}"
+        android:text="@{plan.plan}"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ellipsize="end"
@@ -32,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/goallist_inner_recycler_item_title"
         tools:listitem="@layout/goallist_inner_inner_recycler_item"
-        android:adapter="@{viewModel.adapter}"/>
+        items="@{viewModel.taskList}"/>
 
 </RelativeLayout>
 </layout>
