--- a/app/src/main/res/layout/activity_set_goal.xml
+++ b/app/src/main/res/layout/activity_set_goal.xml
@@ -13,8 +13,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/set_goal_pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adapter="@{viewModel.viewPagerAdapter}"/>
+        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="완료"
-            android:onClick="@{()->viewModel.createGoal(viewModel.goalItem)}"/>
+            android:onClick="@{()->viewModel.createGoal(viewModel.created)}"/>
 
         <View
             android:layout_width="0dp"
