--- a/app/src/main/res/layout/goallist_inner_inner_recycler_item.xml
+++ b/app/src/main/res/layout/goallist_inner_inner_recycler_item.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
-            name="taskData"
+            name="task"
             type="com.ezralee.bdotodo.data.model.TaskData" />
         <variable
             name="viewModel"
@@ -17,15 +17,15 @@
         android:id="@+id/goallist_inner_inner_task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@{taskData.task}"
+        android:text="@{task.task}"
         style="@style/dailyRecyclerTitleStyle"
-        android:textSize="16sp"/>
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/goallist_inner_inner_percentage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@{taskData.total}"
+        android:text="@{task.total}"
         android:layout_alignParentRight="true"
         style="@style/dailyRecyclerTitleStyle"
         android:textSize="16sp"/>
