--- a/app/src/main/res/layout/activity_goal_preset.xml
+++ b/app/src/main/res/layout/activity_goal_preset.xml
@@ -4,11 +4,8 @@
 
     <data>
         <variable
-            name="presetItem"
-            type="com.ezralee.bdotodo.data.model.GoalPreset" />
-        <variable
             name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.goal.GoalPresetActivityVM" />
+            type="com.ezralee.bdotodo.viewmodel.goal.GoalPresetVM" />
     </data>
 
 <RelativeLayout
@@ -78,16 +75,15 @@
             app:itemTextAppearanceActive="@style/selectedBNVtextStyle"
             app:itemTextAppearanceInactive="@style/notSelectedBNVtextStyle"
             app:labelVisibilityMode="labeled"
-            app:setupWithViewPager="@{presetVP}"/>
+            app:setupWithViewPager="@{presetVP}"
+            android:currentTab="@{viewModel.currentPage}"/>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/presetVP"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/preset_BNV"
-            app:addOnPageChangeListener="@{viewModel.pageChangeListener}"
-            app:setAdapter="@{viewModel.viewPagerAdapter}"
-            app:setCurrentItem="@{viewModel.currentPosition}" />
+            app:addOnPageChangeListener="@{viewModel.pageChangeListener}"/>
 
     </RelativeLayout>
 
