--- a/app/src/main/res/layout/goallist_recycler_item.xml
+++ b/app/src/main/res/layout/goallist_recycler_item.xml
@@ -4,10 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="goal"
-            type="com.ezralee.bdotodo.data.model.GoalData" />
-
-        <variable
             name="viewModel"
             type="com.ezralee.bdotodo.viewmodel.goal.MainGoalVM" />
     </data>
@@ -27,7 +23,7 @@
                 android:layout_height="20dp"
                 android:layout_centerVertical="true"
                 android:layout_margin="12dp"
-                android:src="@{goal.color}" />
+                android:src="@{viewModel.goalData.color}" />
 
             <TextView
                 android:id="@+id/daily_recycler_item_title"
@@ -38,7 +34,7 @@
                 android:layout_toRightOf="@id/daily_recycler_item_civ"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="@{goal.goal}" />
+                android:text="@{viewModel.goalData.goal}" />
 
 
             <TextView
@@ -48,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="12dp"
                 android:layout_toLeftOf="@id/goallist_show_more"
-                android:text="@{goal.start}"
+                android:text="@{viewModel.goalData.start}"
                 android:textAlignment="viewEnd"
                 android:textSize="16dp" />
 
@@ -60,7 +56,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginVertical="12dp"
                 android:layout_toLeftOf="@id/goallist_show_more"
-                android:text="@{goal.end}" />
+                android:text="@{viewModel.goalData.end}" />
 
             <ImageView
                 android:id="@+id/goallist_show_more"
