--- a/app/src/main/res/layout/set_goal2_recycler_item.xml
+++ b/app/src/main/res/layout/set_goal2_recycler_item.xml
@@ -2,12 +2,7 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
-        <import type="java.lang.Integer"/>
-        <import type="java.lang.String"/>
-        <variable
-            name="taskData"
-            type="com.ezralee.bdotodo.data.model.TaskData" />
-
+        <import type="java.lang.Object"/>
         <variable
             name="viewModel"
             type="com.ezralee.bdotodo.viewmodel.goal.SetGoalActivityVM" />
@@ -44,7 +39,7 @@
                 android:gravity="center_horizontal"
                 android:hint="재료명"
                 android:maxLines="1"
-                android:text="@={taskData.task}"
+                android:text="@={viewModel.taskData.task}"
                 android:textColor="@color/colorPrimary"
                 android:textColorHint="@color/colorPrimary"
                 android:textCursorDrawable="@color/colorPrimaryVariant" />
@@ -69,7 +64,7 @@
                 android:hint="필요개수"
                 android:inputType="number"
                 android:maxLines="1"
-                android:text="@={(taskData.total).toString()}"
+                android:text="@={viewModel.taskData.total}"
                 android:textColor="@color/colorPrimary"
                 android:textColorHint="@color/colorPrimary"
                 android:textCursorDrawable="@color/colorPrimaryVariant" />
