--- a/app/src/main/res/layout/activity_set_history.xml
+++ b/app/src/main/res/layout/activity_set_history.xml
@@ -5,11 +5,11 @@
 
     <data>
         <variable
-            name="historyItem"
+            name="data"
             type="com.ezralee.bdotodo.data.model.HistoryData" />
         <variable
             name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.history.SetHistoryActivityVM" />
+            type="com.ezralee.bdotodo.viewmodel.history.HistoryVM" />
     </data>
 
 <RelativeLayout
@@ -89,7 +89,7 @@
                 android:textCursorDrawable="@color/colorPrimaryVariant"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="@={historyItem.title}"/>
+                android:text="@={data.title}"/>
 
         </LinearLayout>
 
@@ -114,7 +114,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="10"
                 android:fontFamily="@font/nexonlv1_bold"
-                android:text="@={historyItem.date}"
+                android:text="@={data.date}"
                 android:textSize="20sp"
                 android:gravity="center"
                 android:layout_gravity="center"/>
@@ -127,7 +127,7 @@
                 android:layout_weight="1"
                 android:text="오늘"
                 android:textSize="16sp"
-                android:onClick="@={()->viewModel.setToday()}"/>
+                android:onClick="@{()->viewModel.setToday()}"/>
 
         </LinearLayout>
 
@@ -148,7 +148,7 @@
                 android:entries="@array/category_entry"
                 android:textAlignment="center"
                 android:layout_gravity="center"
-                android:onItemSelected="@={()->viewModel.onLanguageSpinnerItemSelected()}"/>
+                android:onItemSelected="@={()->viewModel.onLanguageSpinnerItemSelected(viewModel.currentSpinnerPosition)}"/>
 
         <View
             android:layout_width="match_parent"
@@ -170,7 +170,8 @@
                 android:layout_gravity="center"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
-                android:src="@drawable/img_sample"/>
+                android:src="@drawable/img_sample"
+                image="@{data.imgUrl}"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -231,7 +232,7 @@
             android:textColor="@color/colorOnSecondary"
             android:textColorHint="@color/colorOnSecondary"
             android:textCursorDrawable="@color/colorPrimaryVariant"
-            android:text="@={historyItem.memo}"/>
+            android:text="@={data.memo}"/>
 
 
         <LinearLayout
@@ -247,7 +248,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="완료"
-                android:onClick="@{()->viewModel.done(historyItem)}"/>
+                android:onClick="@{()->viewModel.done(viewModel.)}"/>
 
             <View
                 android:layout_width="0dp"
