--- a/app/src/main/res/layout/bottom_sheet_history.xml
+++ b/app/src/main/res/layout/bottom_sheet_history.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.history.MainHistoryVM" />
+            type="com.ezralee.bdotodo.viewmodel.history.HistoryVM" />
     </data>
 
     <RelativeLayout
