--- a/app/src/main/res/layout/history_inner_recycler_item.xml
+++ b/app/src/main/res/layout/history_inner_recycler_item.xml
@@ -3,7 +3,10 @@
     <data>
         <variable
             name="data"
-            type="com.ezralee.bdotodo.data.model.HistoryData" />
+            type="com.ezralee.bdotodo.data.model.HistoryData"/>
+        <variable
+            name="viewModel"
+            type="com.ezralee.bdotodo.viewmodel.history.HistoryVM" />
     </data>
 <RelativeLayout
     android:layout_width="match_parent"
